[gd_scene load_steps=4 format=3 uid="uid://rk665no0kiwy"]

[ext_resource type="Script" uid="uid://dq3tghexvijcx" path="res://Scripts/ui.gd" id="1_sgufr"]
[ext_resource type="FontFile" uid="uid://bpqrym8b16w0s" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="1_w65ie"]

[sub_resource type="LabelSettings" id="LabelSettings_sgufr"]
font = ExtResource("1_w65ie")
outline_size = 2
outline_color = Color(0, 1, 0, 1)
shadow_size = 3
shadow_color = Color(1, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_sgufr")

[node name="lable_snap" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label_health" type="Label" parent="lable_snap"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 23.0
text = "Health: "
label_settings = SubResource("LabelSettings_sgufr")

[node name="Label_ammo" type="Label" parent="lable_snap"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 75.0
text = "Ammo:"
label_settings = SubResource("LabelSettings_sgufr")

[node name="Label_metal" type="Label" parent="lable_snap"]
layout_mode = 0
offset_top = 58.0
offset_right = 96.0
offset_bottom = 93.0
text = "Metal:
"
label_settings = SubResource("LabelSettings_sgufr")

[node name="Label_Parley_JEE" type="Label" parent="lable_snap"]
layout_mode = 0
offset_top = 75.0
offset_right = 176.0
offset_bottom = 98.0
text = "Parley-JEE:"
label_settings = SubResource("LabelSettings_sgufr")

[node name="Label_speed" type="Label" parent="lable_snap"]
layout_mode = 0
offset_top = 117.0
offset_right = 176.0
offset_bottom = 140.0
text = "Speed:"
label_settings = SubResource("LabelSettings_sgufr")
